cmake_minimum_required(VERSION 3.28)
project(ntfs)

set(CMAKE_CXX_STANDARD 11)

add_definitions(-DFUSE_USE_VERSION=26 -DHAVE_CONFIG_H)

find_package(PkgConfig)

pkg_check_modules(UUID REQUIRED uuid)
pkg_check_modules(GNU REQUIRED gnutls)
pkg_check_modules(CRYPT REQUIRED libgcrypt)

add_subdirectory(app/tools)
add_subdirectory(app/ntfs-3g)
add_subdirectory(app/libntfs-3g)
add_subdirectory(app/libfuse-lite)

add_dependencies(ntfs-3g libntfs-3g libfuse-lite)
add_dependencies(ntfs-fix libntfs-3g libfuse-lite)
add_dependencies(ntfs-info libntfs-3g libfuse-lite)
add_dependencies(ntfs-cluster libntfs-3g libfuse-lite)
add_dependencies(ntfs-ls libntfs-3g libfuse-lite)
add_dependencies(ntfs-cat libntfs-3g libfuse-lite)
add_dependencies(ntfs-cmp libntfs-3g libfuse-lite)
add_dependencies(ntfs-cp libntfs-3g libfuse-lite)
add_dependencies(ntfs-label libntfs-3g libfuse-lite)
add_dependencies(ntfs-undelete libntfs-3g libfuse-lite)
add_dependencies(ntfs-resize libntfs-3g libfuse-lite)
add_dependencies(ntfs-clone libntfs-3g libfuse-lite)
add_dependencies(ntfs-swipe libntfs-3g libfuse-lite)
add_dependencies(ntfs-truncate libntfs-3g libfuse-lite)
add_dependencies(ntfs-recover libntfs-3g libfuse-lite)
add_dependencies(ntfs-usermap libntfs-3g libfuse-lite)
add_dependencies(ntfs-secaudit libntfs-3g libfuse-lite)
add_dependencies(ntfs-dump-logfile libntfs-3g libfuse-lite)
add_dependencies(ntfs-mftalloc libntfs-3g libfuse-lite)
add_dependencies(ntfs-move libntfs-3g libfuse-lite)
add_dependencies(ntfs-fallocate libntfs-3g libfuse-lite)
add_dependencies(ntfs-decrypt libntfs-3g libfuse-lite)
add_dependencies(ntfsck libntfs-3g libfuse-lite)
add_dependencies(mkntfs libntfs-3g libfuse-lite)
